--- a/Back-End/Api/teste-api/Nova pasta/pom.xml
+++ b/Back-End/Api/teste-api/Nova pasta/pom.xml
@@ -5,13 +5,13 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.5</version>
+		<version>3.3.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>br.com.projetovacina</groupId>
-	<artifactId>testeapi02</artifactId>
+	<groupId>br.com.projeto</groupId>
+	<artifactId>teste-api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>testeapi02</name>
+	<name>teste-api</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
@@ -21,6 +21,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+
+		<dependency>
+    		<groupId>org.hibernate</groupId>
+    		<artifactId>hibernate-core</artifactId>
+    		<version>5.6.0.Final</version> <!-- Versão compatível com o Spring Boot 3.2.6 -->
+		</dependency>
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -47,6 +55,17 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+	<!-- depedencia pra colocar foto -->
+	<!-- <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+    </dependency> -->
+	<!-- depedencia pra colocar foto -->
 	</dependencies>
 
 	<build>
