--- a/Back-End/Api/teste-api/src/main/resources/application.properties
+++ b/Back-End/Api/teste-api/src/main/resources/application.properties
@@ -12,4 +12,7 @@ spring.datasource.username=root
 #Senha do banco de dados
 spring.datasource.password=123456789
 
+#spring.jpa.show-sql=true
+
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
