add gitignore config axios
neste arquivo deve se colocar o ip da maquina, foi ignorado para evitar conflito

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,6 @@ yarn-error.*
 
 # typescript
 *.tsbuildinfo
+
+# configuração do axios/ ignorado pois deve usar o ip da maquina
+src\axios\config.js
