--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "axios": "^1.7.2",
     "expo": "^51.0.8",
     "expo-status-bar": "^1.12.1",
+    "install": "^0.13.0",
+    "npm": "^10.8.1",
     "react": "18.2.0",
     "react-native": "^0.74.1",
     "react-native-gesture-handler": "^2.16.2",
