Adicionar Manipulação Global de Exceções para Erros de Validação
Implementado um manipulador global de exceções para gerenciar erros de validação na API. Isso inclui dois manipuladores principais:

handleValidationExceptions: Gerencia exceções do tipo MethodArgumentNotValidException, extraindo mensagens de erro específicas de campo e retornando-as em um formato estruturado com status HTTP 400 (Bad Request).
handleConstraintViolationException: Lida com exceções do tipo ConstraintViolationException, capturando violações de restrição e formatando-as em uma resposta com status HTTP 400 (Bad Request).
Essas mudanças garantem que erros de validação sejam tratados de forma consistente e retornados de maneira amigável ao usuário.

--- a/Back-End/Api/teste-api/pom.xml
+++ b/Back-End/Api/teste-api/pom.xml
@@ -65,6 +65,19 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- depedencias para validação para os dados antes que sejam  gravados no DB -->
+		<dependency>
+		    <groupId>jakarta.validation</groupId>
+		    <artifactId>jakarta.validation-api</artifactId>
+		    <version>3.0.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.hibernate.validator</groupId>
+		    <artifactId>hibernate-validator</artifactId>
+		    <version>7.0.1.Final</version>
+		</dependency>
+		<!-- depedencias para validação para os dados antes que sejam  gravados no DB -->
+
 	</dependencies>
 
 	<build>
